# tree-sitter-sdevice

./: .bumpversion.toml  .gitignore  .rules  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  example-file  example-file_des.cmd  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
.zed/: tasks.json
bindings/c/: tree-sitter-sdevice.pc.in
bindings/c/tree_sitter/: tree-sitter-sdevice.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_sdevice/: __init__.py  _binding.pyd  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterSdeviceTests/: TreeSitterSdeviceTests.swift
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: expr.txt  file_section.txt  sharp_command.txt  sharp_if.txt  whole_file.txt  whole_file_square_ref.txt
