[package]
name = "tree-sitter-sdevice"
description = "Sentaurus TCAD sdevice command file."
version = "0.0.8"
authors = ["drudream <dru-dream@outlook.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "sdevice"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/Drunk-Dream/tree-sitter-sdevice"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.10"
